refactor#1: created get_kmeans and df_polygon functions

--- a/try_k-means.Rmd
+++ b/try_k-means.Rmd
@@ -12,8 +12,11 @@ knitr::opts_chunk$set(echo = TRUE,
 library(tidyverse)
 library(gganimate)
 library(animation)
-ani.options(ani.width = 780)
+
 source("helper_functions.R")
+
+# Set size of animation window
+ani.options(ani.width = 780)
 ```
 
 ## 1. Prepare your data
@@ -21,14 +24,14 @@ source("helper_functions.R")
 #### a) Initialize dataset as tibble of two variables
 ```{r}
 set.seed(1234)
-x <- rnorm(12, mean = rep(1:3, each = 4), sd = 0.8)
-y <- rnorm(12, mean = rep(c(1, 2, 1), each = 4), sd = 0.8)
+x <- rnorm(12, mean = rep(1:3, each = 4), sd = 1)
+y <- rnorm(12, mean = rep(c(1, 2, 1), each = 4), sd = 1)
 df_xy <- tibble(x, y)
 ```
 #### b) Set initial coordinates of cluster`s centers and their identificators
 ```{r}
-Cx = c(1.6, 1.6, 2.5)
-Cy = c(1, 2, 1.5)
+Cx = c(1, 1.6, 3.5)
+Cy = c(1, 2.0, 0.6)
 # Number of clusters define as length of Cx or Cy vectors
 n_clust <- length(Cx)
 df_cl <- tibble(Cluster = factor(seq(n_clust), ordered = T), Cx, Cy)
@@ -44,7 +47,6 @@ ggplot(df_kmeans0, aes(x, y)) +
   geom_text(aes(x, y, label = rownames(df_xy)), vjust = 2.0, size = 4, color = "black") + 
   geom_point(aes(Cx, Cy, color = Cluster), shape = 3, size = 5, stroke = 1) +
   labs(title = "The initial location of the cluster centers") +
-  #theme_classic() +
   theme(plot.title = element_text(hjust = 0.5))
 ```
 ## 2. Run k-means algorithm
@@ -54,37 +56,23 @@ ggplot(df_kmeans0, aes(x, y)) +
 n_iter <- 5 # nubmer of k-means iterations
 df_kmeans <- wraper_kmeans(df_xy, df_cl, n_iter)
 ```
-#### b) View clusters from last iteration
-```{r}
-df_kmeans[[n_iter]] %>% 
-  select(Cluster, Cx, Cy) %>% 
-      group_by(Cluster) %>% 
-      unique(.) %>% 
-      arrange(Cluster)
+#### b) View main results of k_means algorithm for chosen iteration
+```{r warning=FALSE, paged.print=FALSE}
+my_kmeans <- get_kmeans(n_iter, df_kmeans)
+my_kmeans
 ```
-#### b) Compare result with build-in kmeans() 
+#### c) Get result from build-in k-means() function
 ```{r}
-mxy <- as.matrix(df_xy)
-mcl <- matrix(Cx, Cy, nrow = n_clust, ncol = dim(df_xy)[2])
-test_kmeans <- kmeans(mxy, mcl, iter.max = n_iter)
-test_kmeans
+kmeans(x = as.matrix(df_xy), centers = cbind(Cx, Cy),
+       iter.max = n_iter, algorithm = "Forgy")
 ```
-
 ## 3. Visualize results
 
 #### a) Make "long" dataframe from the df_kmeans list
 ```{r}
 df_long <- map_dfr(df_kmeans, ~ .)
 ```
-#### b) Prepate dataset to make polygons
-```{r}
-df_kmeans %>% 
-  map(~ group_by(.x, Cluster) %>%
-        by(.$Cluster, FUN = function(.) {.[chull(.$x, .$y), ]}) %>% 
-        map_dfr( ~ .) %>% ungroup()) %>% 
-  map_dfr( ~ .) -> df_polygon
-```
-#### c) Visualize clusters as poligons, animate points accesory to clusters (by changing color) and centers of clusters
+#### b) Visualize clusters as poligons, animate points accesory to clusters (by changing color) and centers of clusters
 ```{r message=FALSE, warning=FALSE}
 theme_ani <- theme(
           plot.title = element_text(size = 14, face = "bold", hjust = 0.5),
@@ -99,14 +87,13 @@ ggplot(df_long, aes(x, y, color = Cluster, frame = Iteration)) +
   geom_path(aes(x = Cx, y = Cy, cumulative = TRUE, group = Cluster),
             color = "black") +
   geom_text(aes(x, y, label = rowid), vjust = 1.8, size = 4, color = 'black') +
-  geom_polygon(data = df_polygon,
+  geom_polygon(data = df_polygon(df_kmeans),
                aes(x, y, group = Cluster, fill = Cluster), alpha = .5) +
   labs(title = "How k-means work:") +
   theme_ani -> gg
 
 gganimate(gg)
 ```
-#### d) Visualize of Euclidean distance for each points in each iteration
 ```{r}
 ggplot(df_long, aes(x = rowid, y = Eu_dist, frame = Iteration, cumulative = TRUE)) +
   geom_point(aes(color = Iteration), size = 5) +
